Logtalk/examples/errors/unknownrefs.lgt

:- object(unknownrefs,
	implements(protocol),
	imports(category),
	extends(object)).

	
:- end_object.

